Fix overlap of title and intro image

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,10 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 .page {
-  /* Add page class properties here */
   min-width: 1100px;
   max-width: 1600px;
   line-height: 20px;
@@ -9,22 +14,13 @@
 }
 
 .header {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  min-height: 720px;
-  max-height: 800px;
-  padding-top: 30px;
-  padding-left: 80px;
-  padding-right: 80px;
-  position: relative;
   box-sizing: border-box;
-}
-
-.nav {
-  /* Add flex properties here */
   display: flex;
+  height: 10vh;
+  width: 100%;
+  align-items: center;
   justify-content: space-between;
+  padding: 30px 80px 0 80px;
 }
 
 .logo {
@@ -32,13 +28,18 @@
   width: 196px;
 }
 
-.nav__links {
-  /* Reset default list styles here */
+.nav {
+  width: 100%;
   display: flex;
-  column-gap: 20px;
+  width: fit-content;
+  z-index: 10;
+}
+
+.nav__links {
+  display: flex;
+  column-gap: 30px;
   list-style: none;
-  margin: 8px 0 0;
-  padding: 0;
+  justify-self: flex-end;
 }
 
 .nav__link {
@@ -51,51 +52,69 @@
   color: #1f69c9;
 }
 
-.header__title {
-  margin: 150px 0 0;
+.intro {
+  height: 90vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0 60px 0 80px;
+  margin-top: 60px;
+  margin-bottom: 30px;
+}
+
+.intro__main {
+  display: flex;
+  align-items: center;
+  height: 80%;
+  margin-bottom: 50px;
+}
+
+.intro__text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.intro__title {
   font-size: 66px;
   line-height: 76px;
   font-weight: 500;
-  max-width: 544px;
+  width: 100%;
 }
 
-.header__description {
-  margin: 32px 0 0;
+.intro__description {
   font-size: 20px;
   line-height: 30px;
-  max-width: 532px;
+  width: 80%;
 }
 
-.header__image {
-  z-index: 1;
-  position: absolute;
-  top: 135px;
-  right: 20px;
-  max-width: 636px;
-}
-
-.header__footer {
-  position: absolute;
-  left: 0;
-  bottom: 40px;
-  width: 100%;
+.intro__image {
+  width: 45vw;
   display: flex;
-  align-items: center;
-  padding: 40px 80px 0;
-  justify-content: space-between;
-  box-sizing: border-box;
+  flex-grow: 1;
+  flex-shrink: 0;
+  flex-basis: 600px;
+  max-width: 600px;
 }
 
-.header__link {
+.intro__footer {
+  display: flex;
+  width: 100%;
+  height: 20%;
+  padding: 40px 20px 20px 0;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.intro__link {
   color: #2f80ed;
   text-decoration: none;
 }
 
-.header__link:hover {
+.intro__link:hover {
   color: #1f69c9;
 }
 
-.header__address {
+.intro__address {
   margin: 0;
   color: #838383;
 }
@@ -103,9 +122,8 @@
 .events {
   padding: 100px 0 120px 80px;
   display: flex;
-  align-items: start;
+  align-items: center;
   justify-content: space-between;
-  box-sizing: border-box;
   background-color: #f2f2f2;
 }
 
@@ -117,14 +135,13 @@
   font-size: 20px;
   font-weight: 500;
   line-height: 30px;
-  margin: 0;
 }
 
 .events__title {
   font-size: 44px;
   font-weight: 500;
   line-height: 52px;
-  margin: 32px 0 0;
+  margin-top: 32px;
 }
 
 .events__info-section {
@@ -140,7 +157,7 @@
 
 .event-info__icon {
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: fill;
   margin-right: 12px;
   width: 24px;
   height: 24px;
@@ -238,7 +255,6 @@
 .person__caption {
   text-align: center;
   font-size: 14px;
-  margin: 0;
 }
 
 .staff {
@@ -251,7 +267,7 @@
   text-align: center;
   font-size: 44px;
   line-height: 52px;
-  margin: 0 0 24px;
+  margin-bottom: 24px;
   color: #fff;
 }
 
@@ -260,11 +276,9 @@
   font-size: 20px;
   line-height: 30px;
   font-weight: 400;
-  margin: 0;
   color: #fff;
 }
 
-/* Add the CSS rule for your new class here. Make sure to place it before .card: parents should precede their children */
 .staff__cards {
   max-width: 760px;
   margin: 68px auto 0;
@@ -273,14 +287,12 @@
   flex-wrap: wrap;
   gap: 40px;
   list-style: none;
-  padding-left: 0;
 }
 
 .card {
   background-color: #fff;
   border-radius: 6px;
   padding: 32px 40px 20px 32px;
-  box-sizing: border-box;
   height: 420px;
   width: 360px;
 }
@@ -296,7 +308,6 @@
   font-size: 20px;
   line-height: 30px;
   font-weight: 700;
-  margin: 0;
 }
 
 .card__text {
@@ -328,21 +339,17 @@
 
 .membership__steps {
   list-style-type: none;
-  padding: 0;
-  margin: 100px 0 0;
-  /* Add styles */
+  margin-top: 100px;
   display: flex;
   justify-content: center;
   gap: 40px;
 }
 
 .step {
-  /* Add styles */
   flex-basis: 220px;
 }
 
 .step__title {
-  margin: 0;
   font-size: 20px;
   line-height: 30px;
   font-weight: 700;
@@ -355,7 +362,7 @@
 }
 
 .step__description {
-  margin: 10px 0 0;
+  margin-top: 10px;
 }
 
 .about {
@@ -364,12 +371,10 @@
   color: #fff;
   overflow: hidden;
   position: relative;
-  box-sizing: border-box;
   display: flex;
 }
 
 .about__title {
-  margin: 0;
   font-size: 20px;
   line-height: 30px;
   font-weight: 500;
@@ -388,7 +393,6 @@
 }
 
 .about__paragraph {
-  margin-top: 0;
   margin-bottom: 32px;
 }
 
@@ -407,7 +411,6 @@
 }
 
 .footer {
-  box-sizing: border-box;
   background-color: #1f1f1f;
   color: #fff;
   padding: 60px 102px 60px 80px;
@@ -433,10 +436,7 @@
 }
 
 .footer__list {
-  /* The code below removes the default browser styles for lists */
   list-style-type: none;
-  padding: 0;
-  margin: 0;
 }
 
 .footer__list-item {
@@ -445,10 +445,6 @@
 
 .footer__list-item:last-of-type {
   margin-top: 16px;
-}
-
-.footer__column-heading {
-  margin: 0;
 }
 
 .footer__column-link {
@@ -471,6 +467,5 @@
 }
 
 .footer__copyright {
-  padding: 0;
   margin: 108px 0 0;
 }
